// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQCYk16HLXC2Hh-8yIrvflzJxXzQ9OPCTX2rgSJewvfygcUM",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8456n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{AFF90F570000000000000000}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQCYk16HLXC2Hh-8yIrvflzJxXzQ9OPCTX2rgSJewvfygcUM",
            "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
            "type": "internal",
            "value": 9990348000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{20064F3B00000000000000000000000000000000000000000000000000000000000000007FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFECC2_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQCYk16HLXC2Hh-8yIrvflzJxXzQ9OPCTX2rgSJewvfygcUM",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6636n,
      },
    ],
  },
]
`;
